--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                         <div class="card-body project">
                           <h5 class="card-title text-center">alqassim region</h5>
                           <p class="card-text text-center">Shows the cities of Al-Qassim region with a simple definition of the city</p>
-                          <div class="text-center"><a href="/final-project/alqassim/alqassim.html"><button type="button" class="btn btn-outline-primary m-0 ">preview</button></a></div>
+                          <div class="text-center"><a href="alqassim/alqassim.html"><button type="button" class="btn btn-outline-primary m-0 ">preview</button></a></div>
                         </div>
                       </div>
                     </div>
