--- a/alqassim/alqassim.html
+++ b/alqassim/alqassim.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="candy.css">
+    <link rel="stylesheet" href="qassim.css">
     <title>ALQASSIM</title>
 </head>
 
@@ -44,8 +44,9 @@
         </div>
     </nav>
 
-    <section class="container-fluid px-0 ">
-        <div class="row align-items-center ">
+    <div class="container-fluid ">
+    <section class="container-fluid px-0">
+        <div class="row align-items-center">
             <div class="col-lg-6">
                 <div id="head" class="text-white text-center d-none d-lg-block mt-5">
                     <h1 class="">QASSIM<span>/</span>REGION</h1>
@@ -57,8 +58,8 @@
                     <h1 class="">QASSIM<span>/</span>REGION</h1>
                 </div>
             </div>
-            <div class="col-lg-6 ">
-                <img class="img-fluid w-100 " src="/final-project/pic/map2.jpg" alt="">
+            <div class="col-lg-6 p-0">
+                <img class="img-fluid w-100 " src="/mohammed-website/pic/map2.jpg" alt="">
             </div>
         </div>
 
@@ -66,8 +67,8 @@
     <section class="container-fliud px-0 ">
         <!-- first row -->
         <div class="row align-items-center cont" id="uni">
-            <div class="col-md-6 order-2 order-md-1">
-                <img class="img-fluid w-100" src="/final-project/pic/on.jpg" alt="">
+            <div class="col-md-6 order-2 order-md-1 p-0">
+                <img class="img-fluid w-100" src="/mohammed-website/pic/on.jpg" alt="">
             </div>
             <div class="col-md-6 text-center order-1 order-md-2">
                 <div class="row justify-content-center" >
@@ -96,14 +97,14 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 order-2">
-                <img class="img-fluid w-100" src="/final-project/pic/bro.jpg" alt="">
+            <div class="col-md-6 order-2 p-0">
+                <img class="img-fluid w-100" src="/mohammed-website/pic/bro.jpg" alt="">
             </div>
         </div>
         <!-- third row -->
         <div class="row align-items-center cont" id="ara">
-            <div class="col-md-6 order-2 order-md-1">
-                <img class="img-fluid w-100" src="/final-project/pic/Arrass.jpg" alt="">
+            <div class="col-md-6 order-2 order-md-1 p-0">
+                <img class="img-fluid w-100" src="/mohammed-website/pic/Arrass.jpg" alt="">
             </div>
             <div class="col-md-6 text-center order-1 order-md-2">
                 <div class="row justify-content-center">
@@ -120,6 +121,7 @@
             </div>
         </div>
     </section>
+</div>
 
 
 
