--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <!-- NavBar -->
-    <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-2 sticky-top">
+    <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-2 sticky-top ">
         <a href="#" class="navbar-brand">Mohammed</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="toggle nav">
             <span class="navbar-toggler-icon"></span>
@@ -43,12 +43,13 @@
         </div>
     </nav>
 
+    <div class="container-fluid">
     <!-- content -->
     <div class="container-fluid " id="about">
         <!-- about -->
         <div class="row align-items-center px-0 py-0 justify-content-center " >
-            <div class=" col-lg-8 mt-5">
-                <div id="head" class="ml-4">
+            <div class=" col-lg-8 mt-4">
+                <div id="head" class="ml-1">
                     <h1>About</h1>
                 </div>
                 <p class="lead mt-4 text-center ">
@@ -62,7 +63,7 @@
 
                 <!-- media -->
 
-                <div class="media  my-2 ml-2">
+                <div class="media  my-4 ml-1 ">
                     <a href="https://github.com/im7z"> <svg xmlns="http://www.w3.org/2000/svg"
                             viewBox="0 0 496 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                             <path fill="#ffffff"
@@ -80,8 +81,13 @@
                         </svg></a>
                 </div>
             </div>
+
+            <!-- main img -->
+
             <div class=" col-sm-8 col-lg-4">
-                <img class="img-fluid  vw-100 " src="pic/logo.png" alt="">
+                <div class=" cir box shadow  mt-3 ">
+                <img class="" src="pic/sticker.webp" alt="">
+            </div>
             </div>
         </div>
     </div>
@@ -161,11 +167,11 @@
     </div>
 
     <!-- certificates -->
-    <div class="container-fluid ml-4 mt-4 " id="certificates">
+    <div class="container-fluid ml-1 mt-4 " id="certificates">
         <h1 class="">Certificates</h1>
         <div class="row mt-4 align-items-center justify-content-start">
             <div class="col col-lg-6 col-xl-4 mb-3 ">
-                <div class="card box" style="width: 21rem;">
+                <div class="card box " style="width: 21rem;">
                     <a href="https://drive.google.com/file/d/1r86kwUsV3W7gBoMWVmDTsUI_hACOGSh5/view?usp=sharing"><img
                             src="pic/c1.png" class="card-img-top" alt="..." id="imgg" class="img-fluid"></a>
                     <div class="card-body text-center">
@@ -196,14 +202,14 @@
     </div>
 
     <!-- project -->
-    <div class="container-fluid ml-4 mt-5" id="project">
+    <div class="container-fluid ml-1 mt-5" id="project">
         <h1 class="">project</h1>
         <div class="row mt-4 align-items-center justify-content-start">
-            <div class="col col-lg-6 col-xl-4 mb-3 ">
-                <div class="card mb-3 box" style="max-width: 540px;">
+            <div class="col  col-lg-6 col-xl-4 mb-3">
+                <div class="card mb-3 box w-auto" style="max-width: 540px;">
                     <div class="row no-gutters">
                       <div class="col-md-4 project">
-                        <img src="pic/alqassim.png" alt="..." class="img-fluid rounded-left">
+                        <img src="pic/alqassim.png" alt="..." class="img-fluid round">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body project">
@@ -217,6 +223,8 @@
             </div>
         </div>
     </div>
+
+</div>
 
 
 
