image and font change

--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
 <body>
     <!-- NavBar -->
     <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-2 sticky-top ">
-        <a href="#" class="navbar-brand">Mohammed</a>
+        <a href="#" class="navbar-brand">
+            <div class=" d-inline-block d-lg-none">
+                <img src="/mohammed-website/pic/sticker.webp" width="30" height="30" class="d-inline-block align-top"
+                    alt="" loading="lazy">
+            </div>
+            Mohammed
+        </a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="toggle nav">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -85,7 +91,7 @@
             <!-- main img -->
 
             <div class=" col-sm-8 col-lg-4">
-                <div class=" cir box shadow  mt-3 ">
+                <div class=" cir box shadow  mt-3 d-none d-lg-inline-block">
                 <img class="" src="pic/sticker.webp" alt="">
             </div>
             </div>
