--- a/index.html
+++ b/index.html
@@ -74,12 +74,7 @@
                             viewBox="0 0 496 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                             <path fill="#ffffff"
                                 d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z" />
-                        </svg></a>
-                    <a href="https://x.com/notm7z"> <svg xmlns="http://www.w3.org/2000/svg"
-                            viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-                            <path fill="#ffffff"
-                                d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z" />
-                        </svg></a>
+                        </svg></a> 
                     <a href="#"><svg xmlns="http://www.w3.org/2000/svg"
                             viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                             <path fill="#ffffff"
@@ -102,7 +97,7 @@
     <div class="container-fluid">
         <div class="row  align-items-center m-0 p-0">
             <div class="col-sm-12 col-lg-8 order-2 order-lg-1 ">
-                <div class="container-fluid box rounded mt-3 mt-md-4 m-0 p-0 pt-1 ">
+                <div class="container-fluid box shadow rounded mt-3 mt-md-4 m-0 p-0 pt-1 ">
                     <h2 class="text-center">skills</h2>
                     <div class="row  mb-lg-3">
                         <div class="col-sm-6 col-lg-4 p-0 m-0 text-center mb-2">
@@ -159,7 +154,7 @@
 
             <!-- education -->
             <div class="col-sm-12 col-lg-4 order-1 order-lg-2">
-                <div class="container-fluid box rounded mt-4 mb-lg-3 m-0 p-0">
+                <div class="container-fluid box shadow rounded mt-4 mb-lg-3 m-0 p-0">
                     <h3 class="text-center pt-2"><svg xmlns="http://www.w3.org/2000/svg" height="24" width="21"
                             viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                             <path fill="#B197FC"
@@ -177,7 +172,7 @@
         <h1 class="">Certificates</h1>
         <div class="row mt-4 align-items-center justify-content-start">
             <div class="col col-lg-6 col-xl-4 mb-3 ">
-                <div class="card box " style="width: 21rem;">
+                <div class="card box shadow boxx" style="width: 21rem;">
                     <a href="https://drive.google.com/file/d/1r86kwUsV3W7gBoMWVmDTsUI_hACOGSh5/view?usp=sharing"><img
                             src="pic/c1.png" class="card-img-top" alt="..." id="imgg" class="img-fluid"></a>
                     <div class="card-body text-center">
@@ -212,7 +207,7 @@
         <h1 class="">projects</h1>
         <div class="row mt-4 align-items-center justify-content-start">
             <div class="col  col-lg-6 col-xl-4 mb-3">
-                <div class="card mb-3 box w-auto" style="max-width: 540px;">
+                <div class="card mb-3 box shadow w-auto boxx" style="max-width: 540px;">
                     <div class="row no-gutters">
                       <div class="col-md-4 project">
                         <img src="pic/alqassim.png" alt="..." class="img-fluid round">
