background color change

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <h1 class="">Certificates</h1>
         <div class="row mt-4 align-items-center justify-content-start">
             <div class="col col-lg-6 col-xl-4 mb-3 ">
-                <div class="card box shadow boxx" style="width: 21rem;">
+                <div class="card boxx box shadow " style="width: 21rem;">
                     <a href="https://drive.google.com/file/d/1r86kwUsV3W7gBoMWVmDTsUI_hACOGSh5/view?usp=sharing"><img
                             src="pic/c1.png" class="card-img-top" alt="..." id="imgg" class="img-fluid"></a>
                     <div class="card-body text-center">
@@ -207,7 +207,7 @@
         <h1 class="">projects</h1>
         <div class="row mt-4 align-items-center justify-content-start">
             <div class="col  col-lg-6 col-xl-4 mb-3">
-                <div class="card mb-3 box shadow w-auto boxx" style="max-width: 540px;">
+                <div class="card mb-3 boxx box shadow w-auto " style="max-width: 540px;">
                     <div class="row no-gutters">
                       <div class="col-md-4 project">
                         <img src="pic/alqassim.png" alt="..." class="img-fluid round">
