--- a/index.html
+++ b/index.html
@@ -222,6 +222,41 @@
                     </div>
                   </div>
             </div>
+            <div class="col  col-lg-6 col-xl-4 mb-3">
+                <div class="card mb-3 boxx box shadow w-auto " style="max-width: 540px;">
+                    <div class="row no-gutters">
+                      <div class="col-md-4 project">
+                        <img src="pic/score.png" alt="..." class="img-fluid round">
+                      </div>
+                      <div class="col-md-8">
+                        <div class="card-body project">
+                          <h5 class="card-title text-center">score keeper</h5>
+                          <p class="card-text text-center mt-4">Ping Pong Score Keeper</p>
+                          <div class="text-center mt-5"><a href="ScoreKeeper/ScoreKeeper.html"><button type="button" class="btn btn-outline-primary m-0 ">preview</button></a></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </div>
+        <div class="row mt-4 align-items-center justify-content-start">
+            <div class="col  col-lg-6 col-xl-4 mb-3">
+                <div class="card mb-3 boxx box shadow w-auto " style="max-width: 540px;">
+                    <div class="row no-gutters">
+                      <div class="col-md-4 project">
+                        <img src="pic/calculator.png" alt="..." class="img-fluid round">
+                      </div>
+                      <div class="col-md-8">
+                        <div class="card-body project">
+                          <h5 class="card-title text-center">Calculator</h5>
+                          <p class="card-text text-center mt-4">simple calculator</p>
+                          <div class="text-center mt-4"><a href="calculator/calculator.html"><button type="button" class="btn btn-outline-primary m-0 ">preview</button></a></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+          
         </div>
     </div>
 
