--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <div class="container-fluid ml-1 mt-5" id="project">
         <h1 class="">projects</h1>
         <div class="row mt-4 align-items-center justify-content-start">
-            <div class="col  col-lg-6 col-xl-4 mb-3">
+            <div class="col-12  col-lg-6 col-xl-4 mb-3">
                 <div class="card mb-3 boxx box shadow w-auto " style="max-width: 540px;">
                     <div class="row no-gutters">
                       <div class="col-md-4 project">
@@ -222,7 +222,7 @@
                     </div>
                   </div>
             </div>
-            <div class="col  col-lg-6 col-xl-4 mb-3">
+            <div class="col-12  col-lg-6 col-xl-4 mb-3">
                 <div class="card mb-3 boxx box shadow w-auto " style="max-width: 540px;">
                     <div class="row no-gutters">
                       <div class="col-md-4 project">
@@ -238,9 +238,7 @@
                     </div>
                   </div>
             </div>
-        </div>
-        <div class="row mt-4 align-items-center justify-content-start">
-            <div class="col  col-lg-6 col-xl-4 mb-3">
+            <div class="col-12  col-lg-6 col-xl-4 mb-3">
                 <div class="card mb-3 boxx box shadow w-auto " style="max-width: 540px;">
                     <div class="row no-gutters">
                       <div class="col-md-4 project">
@@ -256,7 +254,6 @@
                     </div>
                   </div>
             </div>
-          
         </div>
     </div>
 
