--- a/ScoreKeeper/ScoreKeeper.html
+++ b/ScoreKeeper/ScoreKeeper.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ex5</title>
+    <title>Score Keeper</title>
     <link rel="stylesheet" href="ScoreKeeper.css">
 </head>
 
 <body>
     <div class="con">
-        <img src="/mohammed-website/pic/pong.webp" alt="">
-        <h1>Ping Pong Score Keeper</h1>
+        <img src="/pic/vs.jpg" alt="">
+        <h1>Score Keeper</h1>
         <h2 id="w"> </h2>
         <h2><span id="pl1">0</span> to <span id="pl2">0</span></h2>
         <p>Use the buttons below to keep score</p>
@@ -27,8 +27,8 @@
         </select>
 
         <div class="btn">
-            <button id="btn1">+1 player one</button>
-            <button id="btn2">+1 player two</button>
+            <button id="btn1">+1 <br> player one</button>
+            <button id="btn2">+1 <br> player two</button>
             <button id="reset">reset</button>
         </div>
     </div>
