--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="calculator.css">
 </head>
 
@@ -15,34 +15,34 @@
             <h1> <span id="num1">0</span> <span id="op"></span> <span id="num2"></span> </h1>
         </div>
         <div class="row2">
-            <button id="clear">AC</button>
-            <button id="sign">+/-</button>
-            <button class="opp">%</button>
-            <button class="opp">÷</button>
+            <button id="clear" class="col4">AC</button>
+            <button id="sign" class="col2">+/-</button>
+            <button class="col2 opp">%</button>
+            <button class="col2 opp">÷</button>
         </div>
         <div class="row3">
-            <button class="num">7</button>
-            <button class="num">8</button>
-            <button class="num">9</button>
-            <button class="opp">×</button>
+            <button class="col1 num">7</button>
+            <button class="col1 num">8</button>
+            <button class="col1 num">9</button>
+            <button class="col2 opp">×</button>
         </div>
         <div class="row4">
-            <button class="num">4</button>
-            <button class="num">5</button>
-            <button class="num">6</button>
-            <button class="opp">-</button>
+            <button class="col1 num">4</button>
+            <button class="col1 num">5</button>
+            <button class="col1 num">6</button>
+            <button class="col2 opp">-</button>
         </div>
         <div class="row5">
-            <button class="num">1</button>
-            <button class="num">2</button>
-            <button class="num">3</button>
-            <button class="opp">+</button>
+            <button class="col1 num">1</button>
+            <button class="col1 num">2</button>
+            <button class="col1 num">3</button>
+            <button class="col2 opp">+</button>
         </div>
         <div class="row6">
-            <button id="dell">DEL</button>
-            <button class="num">0</button>
-            <button id="point">.</button>
-            <button id="eq">=</button>
+            <button id="dell" class="col4">DEL</button>
+            <button class="col1 num">0</button>
+            <button id="point" class="col1">.</button>
+            <button id="eq" class="col3">=</button>
         </div>
     </section>
 
