--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-2 sticky-top ">
         <a href="#" class="navbar-brand">
             <div class=" d-inline-block d-lg-none">
-                <img src="/mohammed-website/pic/sticker.webp" width="30" height="30" class="d-inline-block align-top"
+                <img src="/pic/sticker.webp" width="30" height="30" class="d-inline-block align-top"
                     alt="" loading="lazy">
             </div>
             Mohammed
@@ -87,7 +87,7 @@
 
             <div class=" col-sm-8 col-lg-4">
                 <div class=" cir box shadow  mt-3 d-none d-lg-inline-block">
-                <img class="" src="pic/sticker.webp" alt="">
+                <img class="" src="/pic/sticker.webp" alt="">
             </div>
             </div>
         </div>
@@ -174,7 +174,7 @@
             <div class="col col-lg-6 col-xl-4 mb-3 ">
                 <div class="card boxx box shadow " style="width: 21rem;">
                     <a href="https://drive.google.com/file/d/1r86kwUsV3W7gBoMWVmDTsUI_hACOGSh5/view?usp=sharing"><img
-                            src="pic/c1.png" class="card-img-top" alt="..." id="imgg" class="img-fluid"></a>
+                            src="/pic/c1.png" class="card-img-top" alt="..." id="imgg" class="img-fluid"></a>
                     <div class="card-body text-center">
                         <h5 class="card-title text-center">Web Penetration Testing</h5>
                         <p class="card-text text-center ">Google Developer Student Club</p>
@@ -205,8 +205,8 @@
     <!-- project -->
     <div class="container-fluid ml-1 mt-5" id="project">
         <h1 class="">projects</h1>
-        <div class="row mt-4 align-items-center justify-content-start">
-            <div class="col-12  col-lg-6 col-xl-4 mb-3">
+        <div class="row mt-4  justify-content-start">
+            <div class="col-12 col-sm-6 col-xl-4  mb-3">
                 <div class="card mb-3 boxx box shadow w-auto " style="max-width: 540px;">
                     <div class="row no-gutters">
                       <div class="col-md-4 project">
@@ -222,23 +222,23 @@
                     </div>
                   </div>
             </div>
-            <div class="col-12  col-lg-6 col-xl-4 mb-3">
+            <div class="col-12 col-sm-6 col-xl-4  mb-3">
                 <div class="card mb-3 boxx box shadow w-auto " style="max-width: 540px;">
                     <div class="row no-gutters">
                       <div class="col-md-4 project">
-                        <img src="pic/score.png" alt="..." class="img-fluid round">
+                        <img src="/pic/score.png" alt="..." class="img-fluid round">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body project">
-                          <h5 class="card-title text-center">score keeper</h5>
-                          <p class="card-text text-center mt-4">Ping Pong Score Keeper</p>
-                          <div class="text-center mt-5"><a href="ScoreKeeper/ScoreKeeper.html"><button type="button" class="btn btn-outline-primary m-0 ">preview</button></a></div>
+                          <h5 class="card-title text-center">score keeprer</h5>
+                          <p class="card-text text-center">Simple program that calculates the points for each contestant to detrmine the winner</p>
+                          <div class="text-center"><a href="ScoreKeeper/ScoreKeeper.html"><button type="button" class="btn btn-outline-primary m-0 ">preview</button></a></div>
                         </div>
                       </div>
                     </div>
                   </div>
             </div>
-            <div class="col-12  col-lg-6 col-xl-4 mb-3">
+            <div class="col-12 col-md-6 col-xl-4  mb-3">
                 <div class="card mb-3 boxx box shadow w-auto " style="max-width: 540px;">
                     <div class="row no-gutters">
                       <div class="col-md-4 project">
@@ -254,6 +254,8 @@
                     </div>
                   </div>
             </div>
+            </div>
+          
         </div>
     </div>
 
