--- a/alqassim/alqassim.html
+++ b/alqassim/alqassim.html
@@ -98,7 +98,7 @@
                 </div>
             </div>
             <div class="col-md-6 order-2 p-0">
-                <img class="img-fluid w-100" src="/pic/bro.jpg" alt="">
+                <img class="img-fluid w-100" src="pic/bro.jpg" alt="">
             </div>
         </div>
         <!-- third row -->
