--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-2 sticky-top ">
         <a href="#" class="navbar-brand">
             <div class=" d-inline-block d-lg-none">
-                <img src="/pic/sticker.webp" width="30" height="30" class="d-inline-block align-top"
+                <img src="pic/sticker.webp" width="30" height="30" class="d-inline-block align-top"
                     alt="" loading="lazy">
             </div>
             Mohammed
@@ -87,7 +87,7 @@
 
             <div class=" col-sm-8 col-lg-4">
                 <div class=" cir box shadow  mt-3 d-none d-lg-inline-block">
-                <img class="" src="/pic/sticker.webp" alt="">
+                <img class="" src="pic/sticker.webp" alt="">
             </div>
             </div>
         </div>
@@ -174,7 +174,7 @@
             <div class="col col-lg-6 col-xl-4 mb-3 ">
                 <div class="card boxx box shadow " style="width: 21rem;">
                     <a href="https://drive.google.com/file/d/1r86kwUsV3W7gBoMWVmDTsUI_hACOGSh5/view?usp=sharing"><img
-                            src="/pic/c1.png" class="card-img-top" alt="..." id="imgg" class="img-fluid"></a>
+                            src="pic/c1.png" class="card-img-top" alt="..." id="imgg" class="img-fluid"></a>
                     <div class="card-body text-center">
                         <h5 class="card-title text-center">Web Penetration Testing</h5>
                         <p class="card-text text-center ">Google Developer Student Club</p>
@@ -226,7 +226,7 @@
                 <div class="card mb-3 boxx box shadow w-auto " style="max-width: 540px;">
                     <div class="row no-gutters">
                       <div class="col-md-4 project">
-                        <img src="/pic/score.png" alt="..." class="img-fluid round">
+                        <img src="pic/score.png" alt="..." class="img-fluid round">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body project">
