--- a/ScoreKeeper/ScoreKeeper.html
+++ b/ScoreKeeper/ScoreKeeper.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="con">
-        <img src="/pic/vs.jpg" alt="">
+        <img src="/mohammed-website/pic/vs.jpg" alt="">
         <h1>Score Keeper</h1>
         <h2 id="w"> </h2>
         <h2><span id="pl1">0</span> to <span id="pl2">0</span></h2>
