--- a/ScoreKeeper/ScoreKeeper.html
+++ b/ScoreKeeper/ScoreKeeper.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Score Keeper</title>
     <link rel="stylesheet" href="ScoreKeeper.css">
 </head>
 
 <body>
     <div class="con">
-        <img src="mohammed-website/pic/vs.jpg" alt="">
+        <img src="/mohammed-website/pic/vs.jpg" alt="">
         <h1>Score Keeper</h1>
         <h2 id="w"> </h2>
         <h2><span id="pl1">0</span> to <span id="pl2">0</span></h2>
