--- a/alqassim/alqassim.html
+++ b/alqassim/alqassim.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="col-lg-6 p-0">
-                <img class="img-fluid w-100 " src="/pic/map2.jpg" alt="">
+                <img class="img-fluid w-100 " src="/mohammed-website/pic/map2.jpg" alt="">
             </div>
         </div>
 
@@ -68,7 +68,7 @@
         <!-- first row -->
         <div class="row align-items-center cont" id="uni">
             <div class="col-md-6 order-2 order-md-1 p-0">
-                <img class="img-fluid w-100" src="/pic/on.jpg" alt="">
+                <img class="img-fluid w-100" src="/mohammed-website/pic/on.jpg" alt="">
             </div>
             <div class="col-md-6 text-center order-1 order-md-2">
                 <div class="row justify-content-center" >
@@ -98,13 +98,13 @@
                 </div>
             </div>
             <div class="col-md-6 order-2 p-0">
-                <img class="img-fluid w-100" src="~/pic/bro.jpg" alt="">
+                <img class="img-fluid w-100" src="/mohammed-website/pic/bro.jpg" alt="">
             </div>
         </div>
         <!-- third row -->
         <div class="row align-items-center cont" id="ara">
             <div class="col-md-6 order-2 order-md-1 p-0">
-                <img class="img-fluid w-100" src="/pic/Arrass.jpg" alt="">
+                <img class="img-fluid w-100" src="/mohammed-website/pic/Arrass.jpg" alt="">
             </div>
             <div class="col-md-6 text-center order-1 order-md-2">
                 <div class="row justify-content-center">
