--- a/index.html
+++ b/index.html
@@ -286,6 +286,25 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-12 col-md-6 col-xl-4  mb-3">
+                    <div class="card mb-3 boxx box shadow w-auto " style="max-width: 540px;">
+                        <div class="row no-gutters">
+                            <div class="col-md-4 project">
+                                <img src="pic/athkar.png" alt="..." class="img-fluid round">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body project">
+                                    <h5 class="card-title text-center">اذكارالصباح</h5>
+                                    <p class="card-text text-center mt-4">
+                                    </p>
+                                    <div class="text-center mt-4"><a href="athkar/athkar.html"><button type="button"
+                                                class="btn btn-outline-primary m-0 ">preview</button></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </div>
