--- a/athkar/athkar.html
+++ b/athkar/athkar.html
@@ -18,7 +18,7 @@
 <body>
     <div class="containerr mt-4">
         <h1 class="head text-center d-none">اذكار الصباح</h1>
-        <button class=" undo d-none"><svg xmlns="http://www.w3.org/2000/svg" height="14" width="12.25"
+        <button class=" undo d-none btn"><svg xmlns="http://www.w3.org/2000/svg" height="14" width="12.25"
                 viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                 <path
                     d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z" />
@@ -27,7 +27,7 @@
 
     <hr class="h1 border border-success border-1 opacity-50 d-none">
     <section class="d-flex justify-content-center align-items-center h-75">
-        <button class="start text-center">اذكار الصباح</button>
+        <button class="start btn text-center">اذكار الصباح</button>
         <div class="container  d-none">
             <div class="athkar ">
                 <h3 class="bs mb-2"> </h3>
