--- a/athkar/athkar.html
+++ b/athkar/athkar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="ar" dir="rtl" >
 
 <head>
     <meta charset="UTF-8">
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="athkar.css">
 </head>
 
-<body>
+<body >
     <div class="containerr mt-4">
         <h1 class="head text-center d-none">اذكار الصباح</h1>
         <button class=" undo d-none shadow"><svg xmlns="http://www.w3.org/2000/svg" height="14" width="12.25"
@@ -26,9 +26,9 @@
     </div>
 
     <hr class="h1 border border-success border-1 opacity-50 d-none">
-    <section class="d-flex justify-content-center align-items-center ">
+    <section class="d-flex justify-content-center align-items-center h-100">
         <button class="start  text-center shadow" >اذكار الصباح</button>
-        <div class="container  d-none shadow-lg">
+        <div class="container  d-none shadow-lg ">
             <div class="athkar ">
                 <h3 class="bs mb-2"> </h3>
                 <div class="text text-center mt-3">
