new version of atkar project

--- a/index.html
+++ b/index.html
@@ -294,10 +294,10 @@
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body project">
-                                    <h5 class="card-title text-center">اذكارالصباح</h5>
+                                    <h5 class="card-title text-center">اذكاري</h5>
                                     <p class="card-text text-center mt-4">
                                     </p>
-                                    <div class="text-center mt-4"><a href="athkar/athkar.html"><button type="button"
+                                    <div class="text-center mt-4"><a href="athkarv2/athkarv2.html"><button type="button"
                                                 class="btn btn-outline-primary m-0 ">preview</button></a>
                                     </div>
                                 </div>
