--- a/athkar/athkar.html
+++ b/athkar/athkar.html
@@ -27,7 +27,7 @@
 
     <hr class="h1 border border-success border-1 opacity-50 d-none">
     <section class="d-flex justify-content-center align-items-center h-75">
-        <button class="start  text-center shadow" >اذكار الصباح</button>
+        <button class="start  text-center shadow" ></button>
         <div class="container  d-none shadow-lg ">
             <div class="athkar ">
                 <h3 class="bs mb-2"> </h3>
