--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                             <div class="col-md-8">
                                 <div class="card-body project">
                                     <h5 class="card-title text-center">اذكاري</h5>
-                                    <p class="card-text text-center mt-4">
+                                    <p class="card-text text-center mt-4"> Simple website help users read athkar. 
                                     </p>
                                     <div class="text-center mt-4"><a href="athkarv2/athkarv2.html"><button type="button"
                                                 class="btn btn-outline-primary m-0 ">preview</button></a>
