--- a/athkarv2/athkarv2.html
+++ b/athkarv2/athkarv2.html
@@ -18,7 +18,7 @@
 <body>
 
     <header class="">
-        <h1 class="none">اذكار</h1>
+        <h1 class="none"></h1>
         <button id="return"  class="none"><svg xmlns="http://www.w3.org/2000/svg" height="14" width="12.25"
                 viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                 <path
